[gd_scene load_steps=7 format=3 uid="uid://b1s5c4277h7xb"]

[ext_resource type="Theme" uid="uid://4wnlucn420o6" path="res://Resources/Themes/ScrollContainer-Light.tres" id="1_ebwvi"]
[ext_resource type="Script" uid="uid://ci8dtudiwmloq" path="res://Scripts/Home/HomeMenu.gd" id="1_vhplv"]
[ext_resource type="PackedScene" uid="uid://dfa41l48uuw85" path="res://Scenes/BaseUIComponents/CustomPanelContainer.tscn" id="2_5fefd"]
[ext_resource type="PackedScene" uid="uid://bqabpg44ed0mq" path="res://Scenes/BaseUIComponents/SimpleHttpRequest.tscn" id="2_gb2ne"]
[ext_resource type="SystemFont" uid="uid://qgdcrj7r5eya" path="res://Resources/Fonts/SystemFontBold.tres" id="3_8ssm4"]
[ext_resource type="PackedScene" uid="uid://d2870yealvg0d" path="res://Scenes/ThemePainter.tscn" id="4_vhplv"]

[node name="HomeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vhplv")

[node name="RecommendedWorksRequest" parent="." instance=ExtResource("2_gb2ne")]
unique_name_in_owner = true
connect_type = 1

[node name="NewWorksRequest" parent="." instance=ExtResource("2_gb2ne")]
unique_name_in_owner = true
connect_type = 1

[node name="RecommendedUsersRequest" parent="." instance=ExtResource("2_gb2ne")]
unique_name_in_owner = true

[node name="RecommendedFanficsRequest" parent="." instance=ExtResource("2_gb2ne")]
unique_name_in_owner = true
connect_type = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ebwvi")

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="RecommendedWorksPanel" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_5fefd")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedWorksPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedWorksPanel/MarginContainer"]
layout_mode = 2

[node name="RecommendedWorksLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedWorksPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.105882, 0.105882, 1)
theme_override_fonts/font = ExtResource("3_8ssm4")
theme_override_font_sizes/font_size = 24
text = "RECOMMENDED_WORKS_NAME"

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedWorksPanel/MarginContainer/VBoxContainer/RecommendedWorksLabel" instance=ExtResource("4_vhplv")]

[node name="RecommendedWorksContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedWorksPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="NewWorksPanel" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_5fefd")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/NewWorksPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/NewWorksPanel/MarginContainer"]
layout_mode = 2

[node name="NewWorksLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/NewWorksPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.105882, 0.105882, 1)
theme_override_fonts/font = ExtResource("3_8ssm4")
theme_override_font_sizes/font_size = 24
text = "NEW_WORKS_NAME"

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/VBoxContainer/NewWorksPanel/MarginContainer/VBoxContainer/NewWorksLabel" instance=ExtResource("4_vhplv")]

[node name="NewWorksContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/NewWorksPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="RecommendedFanficsPanel" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_5fefd")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedFanficsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedFanficsPanel/MarginContainer"]
layout_mode = 2

[node name="RecommendedFanficsLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedFanficsPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.105882, 0.105882, 1)
theme_override_fonts/font = ExtResource("3_8ssm4")
theme_override_font_sizes/font_size = 24
text = "RECOMMENDED_FANFICS_NAME"

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedFanficsPanel/MarginContainer/VBoxContainer/RecommendedFanficsLabel" instance=ExtResource("4_vhplv")]

[node name="RecommendedFanficsContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedFanficsPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[node name="RecommendedUsersPanel" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_5fefd")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedUsersPanel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedUsersPanel/MarginContainer"]
layout_mode = 2

[node name="RecommendedUsersLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedUsersPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.105882, 0.105882, 0.105882, 1)
theme_override_fonts/font = ExtResource("3_8ssm4")
theme_override_font_sizes/font_size = 24
text = "RECOMMENDED_USERS_NAME"

[node name="ThemePainter" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedUsersPanel/MarginContainer/VBoxContainer/RecommendedUsersLabel" instance=ExtResource("4_vhplv")]

[node name="RecommendedUsersContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/RecommendedUsersPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 12
theme_override_constants/v_separation = 12

[connection signal="request_completed" from="RecommendedWorksRequest" to="." method="_on_recommended_works_request_request_completed"]
[connection signal="request_completed" from="NewWorksRequest" to="." method="_on_new_works_request_request_completed"]
[connection signal="request_completed" from="RecommendedUsersRequest" to="." method="_on_recommended_users_request_request_completed"]
[connection signal="request_completed" from="RecommendedFanficsRequest" to="." method="_on_recommended_fanfics_request_request_completed"]
